--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,6 +79,32 @@ body {
   }
 }
 
+/* For mobile */
+.floating-threads {
+  display: none;
+}
+
+/* For desktop */
+.anchored-threads {
+  display: block;
+  max-width: 300px;
+  width: 100%;
+  position: absolute;
+  right: 12px;
+}
+
+@media (max-width: 640px) {
+  .floating-threads {
+    display: block;
+  }
+
+  .anchored-threads {
+    display: none;
+  }
+}
+
+
+
 @layer base {
   * {
     @apply border-border;
@@ -261,4 +287,22 @@ body {
     cursor: ew-resize;
     cursor: col-resize;
   }
+}
+
+
+
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+
+div[data-radix-popper-content-wrapper] {
+  z-index: 50 !important;
 }
